# archive-minter

./: .gitignore  README.md  package-lock.json  package.json  thankyou.txt
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte  app.css
