[package]
name = "archive-minter"
version = "0.1.0"
description = "Archive-Minter"
authors = ["dioni"]
edition = "2024"

[lib]
name = "archive_minter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
decruft = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.19"
base64 = "0.22"
url = "2.5.8"
html2md = "0.2"
regex = "1.12.3"
